<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/visualizationFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_visualize" />
    <item
        android:id="@+id/resultsFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_results" />
    <item
        android:id="@+id/savedResultsFragment"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_saved" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
